<resources>
    <string name="app_name">Control de Cliente</string>
    <string name="buscar_cliente">Buscar cliente</string>
    <string name="agregar_nuevo_cliente">Agregar nuevo cliente</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="agregar_direci_n">Agregar otra direción</string>
    <string name="guardar_cliente">Guardar</string>
    <string name="direcci_n">Dirección</string>
    <string name="email">email</string>
    <string name="borrar">borrar</string>
    <string name="actualizar">actualizar</string>
    <string name="no_hay_clientes_registrado_msj">No hay clientes registrado en este momento</string>
    <string name="quieres_borrar_el_cliente">quieres Borrar el cliente? tambien borraras sus Direcciones.</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="si">si</string>
</resources>