<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="modelo"
        type="com.cv5.controldecliente.viewModel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.MainActivity">


        <EditText
            android:id="@+id/etBusquedas"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/buscar_cliente"
            android:singleLine="true"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:text="@={modelo.parameterBusqueda}"

            android:importantForAutofill="no" />


        <TextView
            android:id="@+id/tvNoCliente"
            android:text="@string/no_hay_clientes_registrado_msj"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_height="wrap_content" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/miRecycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFormularioActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:contentDescription="@string/agregar_nuevo_cliente"
            android:src="@drawable/baseline_add_circle_24" />

    </LinearLayout>
</layout>